[package]
name = "toward_the_top"
version = "0.1.0"
authors = ["Hyunwook Ha <hyunwook1202ha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4"
bevy_rapier2d = { version = "*", features = [ "simd-nightly", "parallel" ] }